--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -42,7 +42,7 @@ In addition, but second-tier, the PID of a related dataset could also be mention
 
 Many data repositories will offer the option to add a related identifier. According to the [DataCite Metadata Schema](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/), [`IsCitedBy`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#iscitedby) and [`IsSupplementTo`](https://datacite-metadata-schema.readthedocs.io/en/4.5/appendices/appendix-1/relationType/#issupplementto) are both recommended for discovery. As stressed [above](#how-to-use-dataset-pids-in-scientific-articles), while datasets _may_ be cited within the article, the data availability statement should include them, first and foremost. Hence, to ensure the correct linking on the side of the datset, the relation type `IsSupplementTo` should primarily used, while `IsCitedBy` can be used in addition if the dataset is indeed referenced. 
 
-<!-- ^ We're all in agreement here, correct?-->
+See also: [Crossref's documentation on **linking datasets** to published items](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/)
 
 ## For Research Data Repositories
 
