feat: show ELNs from ELN Finder

--- a/docs/10_domains/10_analytical_chemistry.mdx
+++ b/docs/10_domains/10_analytical_chemistry.mdx
@@ -5,6 +5,7 @@ slug: "/analytical_chemistry"
 ---
 
 import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="analytical chemistry" />
 <LbeChip title="chemometric" />
@@ -26,6 +27,8 @@ Some open data formats are available for specific data types, such as mass spect
 ## ELNs and Other Tools
 
 General chemistry ELNs can typically be used for analytical chemistry data and may be well suited to your research topic. However, there are also specialised tools that are tailored to the needs of analytical chemists. These tools often include features for managing instrument data, processing raw data files and visualising results. They may also include tools for chemometric analysis.
+
+<ElnFinder />
 
 ## Publishing Data
 
