feat: added content to repo subpages

--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -7,7 +7,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Choose a Repository
 
-The NFDI4Chem aims to support researchers in collecting, storing, processing, analysing, publishing, and reusing research data. Based on the [NFDI4Chem Community Survey](https://doi.org/10.1002/zaac.202000339), a list of the most [common data types and formats](LINK_TO_TABLE_PAGE) of the community has been compiled to suggests suitable trusted chemistry-friendly repositories.
+The NFDI4Chem aims to support researchers in collecting, storing, processing, analysing, publishing, and reusing research data. Based on the [NFDI4Chem Community Survey](https://doi.org/10.1002/zaac.202000339), a list of the most [common data types and formats](/docs/pub_data_types_formats) of the community has been compiled to suggests suitable trusted chemistry-friendly repositories.
 
 This decision tree will guide users to quickly select a suitable repository for publishing their research data!
 
@@ -62,10 +62,8 @@ Further details of the repositories listed above can be found on the sub-pages o
 
 ---
 
+Main authors: [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
+
 _This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License to allow for reuse of these lists._ 
 
 ![CC0 badge](/img/cc-zero.svg)
-
----
-
-Main authors: [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
