--- a/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
+++ b/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
@@ -5,4 +5,26 @@ slug: "/massbank_eu"
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Heading 1
+# MassBank EU - High Quality Mass Spectrometry Reference Database
+
+Link to [MassBank EU](https://massbank.eu/) and [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html)
+Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.dk451a)
+Link to [re3data](http://doi.org/10.17616/R3K05Z)
+
+
+## Quick facts
+
+-   **Accepted data types:** MassBank format, see [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html).
+-   **Used standards/ontologies:** [MassBank Record Format](https://github.com/MassBank/MassBank-web/blob/main/Documentation/MassBankRecordFormat.md)
+-   **Data deposition condition:** open
+-   **Recommended by Journals/Societies:** Official database of the [Mass Spectrometry Society of Japan](https://www.mssj.jp/index_en.html)
+
+## Details
+
+MassBank EU is a **field-specific** and the first public repository of **mass spectrometry reference spectra**. Their target user groups in the domains of **chemistry** and **life sciences** are analytical chemists, metabolomics, biochemists, and bioinformaticians. Datasets from community users and projects are **openly accessible** and represent the official database of the [Mass Spectroscopy Society of Japan](https://www.mssj.jp/index_en.html).
+
+GitHub is used as their current **AAI environment** (open read access, limited write access), whereas [GitHub issues](https://github.com/MassBank/MassBank-web/issues) serves as their curation tracking system. The curation itself is performed by the [MassBank record validator](https://massbank.github.io/MassBank-documentation/contributor_documentation.html). The datasets can be **searched** for **compound** and mass spectrometry **information** and **peaks**. MassBank Record ID (Accession) and USI (Universal Spectrum Identifier) are used as **persistent identifier systems**. The MassBank EU spectral data is hosted in a revision control system with all spectral data and the corresponding metadata in a human-readable record format, and continuous integration (CI) checking record integrity for each change. Instances of the web interface are hosted at Helmholtz Centre for Environmental Research (UFZ) (Leipzig) and Leibniz Institute of Plant Biochemistry (IPB) (Halle) and can be installed locally as well. They offer interfaces for data import via Git (MassBank record format) and for data export (JSON-LD) and a REST API. On top of that [RMassBank](https://github.com/MassBank/RMassBank) is provided as a separated data processing/analysis tool.
+    
+---
+
+Main authors: [ORCID:0000-0002-7899-7192](https://orcid.org/0000-0002-7899-7192), [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
