feat fix all: before pr

--- a/docs/50_data_publication/20_choose_repository/60_nomad.mdx
+++ b/docs/50_data_publication/20_choose_repository/60_nomad.mdx
@@ -1,5 +1,5 @@
 ---
-title: "NOMAD - NOvel MAterials Discovery"
+title: "NOMAD"
 slug: "/nomad"
 ---
 
@@ -24,4 +24,4 @@ Nomad is a public repository operating since 2015 that is hosted at the MPCDF (M
     
 ---
 
-Main authors: [ORCID: -](https://orcid.org/tbd), [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
+Main authors: [ORCID: orcid.org/0000-0003-2637-6009](https://orcid.org/0000-0003-2637-6009), [ORCID:0000-0001-7696-7662](https://orcid.org/0000-0001-7696-7662), [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-5035-7978](https://orcid.org/0000-0002-5035-7978)
