--- a/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository/10_choose_repository.mdx
@@ -36,7 +36,7 @@ Based on the [criteria](https://doi.org/10.3897/rio.6.e55852) chosen by Task Are
 -   [Inorganic Crystal Structure Database](https://icsd.fiz-karlsruhe.de/)*<br/>Field-specific repository for x-ray diffraction data of inorganic compounds, elements, minerals, intermetallic phases and ionic solids, operated by FIZ Karlsruhe.
 -   [Joint CCDC/FIZ Access Structures Service](https://www.ccdc.cam.ac.uk/structures/)<br/>Service that provides open access to the CSD Structure Depot, but not to all CSD data. 
 
-*Resource for which a licence agreement is required. 
+*Resource for which a license agreement is required. 
 
 ## Further Repositories
 
@@ -46,11 +46,11 @@ Based on the [criteria](https://doi.org/10.3897/rio.6.e55852) chosen by Task Are
 -   [Zenodo](https://zenodo.org/)<br/>Generic repository developed under the European OpenAIRE program, operated by CERN.
 -   [EUDAT B2SHARE](https://sp.eudat.eu/catalog/resources/709c053d-3b3f-4c54-8ef4-6efeea387816)<br/>Generic repository operated by a pan-european network consisting of more than 25 research organisations, data and computing centers.
 
-*Resource for which a licence agreement is required.  
+*Resource for which a license agreement is required.  
 
 ## Currently under Development within NFDI4Chem
 
--   [VibSpecDB](https://vibspecdb.k8s.photonicdata.science/)<br/>Filed-specifc repository for IR and Raman data.
+-   [VibSpecDB](https://vibspecdb.k8s.photonicdata.science/)<br/>Filed-specific repository for IR and Raman data.
 
 :::danger Notice:
 We published an [analysis of the landscape of repositories for chemistry research data in re3data](https://zenodo.org/doi/10.5281/zenodo.8347992) and [criteria for chemistry repositories](https://zenodo.org/doi/10.5281/zenodo.8199754) on Zenodo. These lists will be continuously updated with further recommendations on trusted and chemistry-friendly repositories.
