--- a/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
+++ b/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
@@ -20,7 +20,7 @@ Link to [re3data](http://doi.org/10.17616/R31NJNGJ)
 ## Details
 
 **General Information**
-NmrXiv (pronounced nm-archive) is a FAIR and Open, Consensus-Driven Nuclear Magnetic Resonance (NMR) Data Repository and Computational platform. It is currently being developed with the ultimate goal of accelerating broader coordination and data sharing among researchers by creating a platform for managing, sharing, and analyzing raw and processed NMR spectral data.
+nmrXiv (pronounced nm-archive) is a FAIR and Open, Consensus-Driven Nuclear Magnetic Resonance (NMR) Data Repository and Computational platform. It is currently being developed with the ultimate goal of accelerating broader coordination and data sharing among researchers by creating a platform for managing, sharing, and analyzing raw and processed NMR spectral data.
 
 The immediate goal of nmrXiv is to integrate and execute the following objectives by establishing nmrXiv as a consensus-driven resource designed to serve global chemistry research and adjacent natural products / metabolomics communities.
 
