--- a/docs/50_data_publication/20_choose_repository/80_suprabank.mdx
+++ b/docs/50_data_publication/20_choose_repository/80_suprabank.mdx
@@ -21,7 +21,7 @@ Link to [re3data](http://doi.org/10.17616/R31NJMQ9)
 
 ## Details
 
-SupraBank is hosted at KIT (Karlsruhe) since 2019 and is a curated database that provides project data on **intermolecular interactions of molecular systems** and **supramolecular interactions** which are not available in other repositories or databases. SupraBank is mainly aimed at supramolecular and physical chemists or biologists in the domain of organic chemistry who deal with binding, assembly, and interaction phenomena. Molecular properties are retrieved from PubChem, allowing the correlation of intermolecular interactions parameters to molecular properties of the interacting components. All molecules, solvents, and additives are searchable by their chemical identifiers. At present, SupraBank stores more than 3500 curated datasets of intermolecular interaction parameters. The data has open access for viewing and registered access for data download and contribution. It can be searched for experiments and related components, molecule interactions, and publications while being curated by non-judgemental plausibility checks. The current implementation of AAI consists of internal user administration (anonymous and non-anonymous user, data provider, administrator). DOI is used as the identification system for citations and ORCID iD as the identification system for authors. Its web interface offers file format compatibility with CSV, JSON, BibTex, RIS, and Endnote and its tool suite contains molecule representations as pictures, a structure editor, and a simulation modeller tool.
+SupraBank is hosted at KIT (Karlsruhe) since 2019 and is a curated database that provides project data on **intermolecular interactions of molecular systems** and **supramolecular interactions** which are not available in other repositories or databases. SupraBank is mainly aimed at supramolecular and physical chemists or biologists in the domain of organic chemistry who deal with binding, assembly, and interaction phenomena. Molecular properties are retrieved from PubChem, allowing the correlation of intermolecular interactions parameters to molecular properties of the interacting components. All molecules, solvents, and additives are searchable by their chemical identifiers. At present, SupraBank stores more than 3500 curated datasets of intermolecular interaction parameters. The data has open access for viewing and registered access for data download and contribution. It can be searched for experiments and related components, molecule interactions, and publications while being curated by non-judgemental plausibility checks. The current implementation of AAI consists of internal user administration (anonymous and non-anonymous user, data provider, administrator). DOI is used as the identification system for citations and ORCID iD as the identification system for authors. Its web interface offers file format compatibility with CSV, JSON, BibTex, RIS, and Endnote and its tool suite contains molecule representations as pictures, a structure editor, and a simulation modell tool.
 
 ---
 
