feat: added info box for links to repo, fs and rd

--- a/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
+++ b/docs/50_data_publication/20_choose_repository/40_massbank_eu.mdx
@@ -7,10 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # MassBank EU - High Quality Mass Spectrometry Reference Database 
 
-Link to [MassBank EU](https://massbank.eu/) and [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html), 
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.dk451a), 
-Link to [re3data](http://doi.org/10.17616/R3K05Z).
-
+:::info Note:
+Link to [MassBank EU](https://massbank.eu/) and [RMassBank](https://bioconductor.org/packages/release/bioc/html/RMassBank.html), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.dk451a), Link to [re3data](http://doi.org/10.17616/R3K05Z).
+:::
 
 ## Quick facts
 
