--- a/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
+++ b/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
@@ -5,10 +5,11 @@ slug: "/nmrxiv"
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# nmrXiv 
-Link to [nmrXiv](https://nmrxiv.org/)
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.052828)
-Link to [re3data](http://doi.org/10.17616/R31NJNGJ)
+# nmrXiv
+
+:::info Note:
+Link to [nmrXiv](https://nmrxiv.org/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.052828), Link to [re3data](http://doi.org/10.17616/R31NJNGJ).
+:::
 
 ## Quick facts
 
