--- a/docs/50_data_publication/20_choose_repository/60_nomad.mdx
+++ b/docs/50_data_publication/20_choose_repository/60_nomad.mdx
@@ -7,9 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # NOMAD - NOvel MAterials Discovery
 
-Link to [NOMAD](https://nomad-lab.eu/)
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.aq20qn)
-Link to [re3data](http://doi.org/10.17616/R32K89)
+:::info Note:
+Link to [NOMAD](https://nomad-lab.eu/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.aq20qn), Link to [re3data](http://doi.org/10.17616/R32K89).
+:::
 
 ## Quick facts
 
