--- a/docs/50_data_publication/20_choose_repository/60_radar4chem.mdx
+++ b/docs/50_data_publication/20_choose_repository/60_radar4chem.mdx
@@ -7,10 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # RADAR4Chem - Research Data Repository for Chemistry
 
-Link to [RADAR4Chem](https://radar4chem.radar-service.eu/)
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.3b3157)
-Link to [re3data](http://doi.org/10.17616/R31NJNAY)
-
+:::info Note:
+Link to [RADAR4Chem](https://radar4chem.radar-service.eu/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.3b3157), Link to [re3data](http://doi.org/10.17616/R31NJNAY).
+:::
 
 ## Quick facts
 
