--- a/docs/50_data_publication/20_choose_repository/70_strenda_db.mdx
+++ b/docs/50_data_publication/20_choose_repository/70_strenda_db.mdx
@@ -7,9 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # STRENDA DB - Repository for Reporting Enzymology Data
 
-Link to [STRENDA DB](https://www.beilstein-strenda-db.org/)
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.ekj9zx)
-Link to [re3data](http://doi.org/10.17616/R3536N)
+:::info Note:
+Link to [STRENDA DB](https://www.beilstein-strenda-db.org/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.ekj9zx), Link to [re3data](http://doi.org/10.17616/R3536N).
+:::
 
 ## Quick facts
 
