--- a/docs/50_data_publication/20_choose_repository/80_suprabank.mdx
+++ b/docs/50_data_publication/20_choose_repository/80_suprabank.mdx
@@ -7,10 +7,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # SupraBank
 
-Link to [SupraBank](https://suprabank.org/)
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.vjWUT7)
-Link to [re3data](http://doi.org/10.17616/R31NJMQ9)
-
+:::info Note:
+Link to [SupraBank](https://suprabank.org/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.vjWUT7), Link to [re3data](http://doi.org/10.17616/R31NJMQ9).
+:::
 
 ## Quick facts
 
