--- a/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
+++ b/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
@@ -7,15 +7,16 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # CSD, ICSD - Joint CCDC/FIZ access structures service
 
+:::info Note:
 Link to [CSD](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/) (requires license) [ICSD](https://icsd.fiz-karlsruhe.de/) (requires license) and [Joint CCDC/FIZ Access Structure](https://www.ccdc.cam.ac.uk/structures/) that provides open access to the CSD Structure Depot, but not all CSD data.
 
-CSD:
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.vs7865)
+CSD: Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.vs7865)
 Link to [re3data](http://doi.org/10.17616/R36011)
 
 ICSD:
 Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.a95199)
 Link to [re3data](http://doi.org/10.17616/R3GW2V)
+:::
 
 ## ICSD quick facts:
 
