--- a/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
+++ b/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
@@ -5,9 +5,9 @@ slug: /chemotion_repository
 
 # Chemotion Repository - Repository for Samples, Reactions and Research data
 
-Link to [Chemotion Repository](https://www.chemotion-repository.net/) 
-Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.iagXcR)
-Link to [re3data](http://doi.org/10.17616/R34P5T)
+:::info Note:
+Link to [Chemotion Repository](https://www.chemotion-repository.net/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.iagXcR), Link to [re3data](http://doi.org/10.17616/R34P5T).
+:::
 
 ## Quick facts
 
