--- a/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
+++ b/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
@@ -24,7 +24,7 @@ Link to [Chemotion Repository](https://www.chemotion-repository.net/), Link to [
 
 ## Details
 
-Chemotion Repository is a **field-specific** repository and covers research data that is assigned to molecules, their properties and characterisation as well as reactions and experimental investigations. It is hosted at Karlsruhe Institute for Technology (KIT). Scientists in the domains of **molecular** and **synthetic chemistry** are supported in their efforts to handle data in a **FAIR** manner: the data is stored according to the common practices of scientists assigned to molecules and reactions and the system provides the required [Digital Object Identifiers](https://www.doi.org/) (DOIs) without additional effort for the scientist. The given metadata is supported by the implementation of ontology terms. The **findability** of the data is achieved by text, structure, and identifier search options and the submitted samples and their structure are referenced in PubChem to gain higher visibility of the work for the scientists. The repository is interoperable with the **Chemotion ELN** which means that data can be transferred from ELN to the repository. Data is curated by [**automatic checks**](https://www.chemotion-repository.net/home/howto/c40fdb44-8854-46bf-88b3-cc9d6adc3543) and a peer review process. The integration of data stored in the repository in publications was shown with several examples and its usage is currently recommended by [**Chemistry—Methods**](https://chemistry-europe.onlinelibrary.wiley.com/journal/26289725). Authors can be referenced by their [ORCID iDs](https://orcid.org/). Chemists and materials scientists can publish data for open access (data view) and registered access (dataset contribution and download). Stored data can be searched by chemical structure, author, dataset type, status, identifier, and DOI. The **current AAI solution** is based on an internal user administration (administrator, anonymous and registered user, curator). **Metadata** according to **DataCite** is compliant with the [Open Archives Initiative Protocol for Metadata Harvesting](http://www.openarchives.org/pmh/) **(OAI-PMH)** scheme. The Chemotion Repository offers an internal substance register, spectra viewers (ChemSpectra and NMRium), a structure editor (Ketcher), and their own data converter.
+Chemotion Repository is a **field-specific** repository and covers research data that is assigned to molecules, their properties and characterisation as well as reactions and experimental investigations. It is hosted at Karlsruhe Institute for Technology (KIT). Scientists in the domains of **molecular** and **synthetic chemistry** are supported in their efforts to handle data in a **FAIR** manner: the data is stored according to the common practices of scientists assigned to molecules and reactions and the system provides the required [Digital Object Identifiers](https://www.doi.org/) (DOIs) without additional effort for the scientist. The given metadata is supported by the implementation of ontology terms. The **findability** of the data is achieved by text, structure, and identifier search options and the submitted samples and their structure are referenced in PubChem to gain higher visibility of the work for the scientists. The repository is interoperable with the **Chemotion ELN** which means that data can be transferred from ELN to the repository. Data is curated by [automatic checks](https://www.chemotion-repository.net/home/howto/c40fdb44-8854-46bf-88b3-cc9d6adc3543) and a peer review process. The integration of data stored in the repository in publications was shown with several examples and its usage is currently recommended by [Chemistry—Methods](https://chemistry-europe.onlinelibrary.wiley.com/journal/26289725). Authors can be referenced by their [ORCID iDs](https://orcid.org/). Chemists and materials scientists can publish data for open access (data view) and registered access (dataset contribution and download). Stored data can be searched by chemical structure, author, dataset type, status, identifier, and DOI. The **current AAI solution** is based on an internal user administration (administrator, anonymous and registered user, curator). **Metadata** according to **DataCite** is compliant with the [Open Archives Initiative Protocol for Metadata Harvesting](http://www.openarchives.org/pmh/) **(OAI-PMH)** scheme. The Chemotion Repository offers an internal substance register, spectra viewers (ChemSpectra and NMRium), a structure editor (Ketcher), and their own data converter.
 
 Please note: Chemotion Repository accepts all data types and some of them can be also processed and edited in spectral viewers.
 
