--- a/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
+++ b/docs/50_data_publication/20_choose_repository/30_chemotion_repo.mdx
@@ -3,7 +3,7 @@ title: "Chemotion Repository"
 slug: /chemotion_repository
 ---
 
-# Chemotion Repository - Repository for Samples, Reactions and Research data
+# Chemotion Repository – Repository for Samples, Reactions and Research data
 
 :::info Note:
 Link to [Chemotion Repository](https://www.chemotion-repository.net/), Link to [FAIRsharing](https://doi.org/10.25504/FAIRsharing.iagXcR), Link to [re3data](http://doi.org/10.17616/R34P5T).
