--- a/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
+++ b/docs/50_data_publication/20_choose_repository/50_nmrxiv.mdx
@@ -1,5 +1,4 @@
 ---
-title: "nmrXiv"
 slug: "/nmrxiv"
 ---
 
@@ -13,7 +12,7 @@ Link to [nmrXiv](https://nmrxiv.org/), Link to [FAIRsharing](https://doi.org/10.
 
 ## Quick facts
 
--   **Accepted data types:** all major NMR data formats - NMReData, Bruker
+-   **Accepted data types:** all major NMR data formats – NMReData, Bruker
 -   **Used standards/ontologies:** [ontologies used](https://docs.nmrxiv.org/introduction/data/ontologies.html)
 -   **Data deposition condition:** open
 -   **Recommended by Journals/Societies:** The repository is recommended by [The Journal of Natural Products](https://pubs.acs.org/doi/10.1021/acs.jnatprod.3c00281) and by [Angewandte Chemie](https://onlinelibrary.wiley.com/page/journal/15213773/homepage/notice-to-authors)
@@ -28,12 +27,12 @@ The immediate goal of nmrXiv is to integrate and execute the following objective
 **Software Development**
 To develop nmrXiv based on a voluntarily FAIR, cloud-based infrastructure that uses freely shared source code and deployment methods. Apply industry-grade development practices to ensure platform reliability, safety, and efficacy. Use Continuous Improvement principles will ensure an always-on user experience and high reliability. Release the codebase and infrastructure details (including the development, documentation, and usage practices) through MIT Open Source License for openness.
 
-More details about the platform architecture and related topics - [here](https://docs.nmrxiv.org/developer-guides/architecture.html)
+More details about the platform architecture and related topics – [here](https://docs.nmrxiv.org/developer-guides/architecture.html)
 
 **Submission, Curation, and Analysis**
 Enable the FAIR sharing of raw NMR data to enhance the quality of chemical research and dissemination. Also, to develop non-prescriptivist curation and analysis standards for data and metadata. Build standards with input and contributions from the community and make them compatible with existing and potential newly developed formats and approaches.
 
-More details about the data standards and related topics - [here](https://docs.nmrxiv.org/category/data.html)
+More details about the data standards and related topics – [here](https://docs.nmrxiv.org/category/data.html)
 
 **Workshops and Training**
 To engage analytical chemistry researchers and adjacent communities through webinars, workshops, tutorials, and community calls to ensure that nmrXiv meets the researchers’ needs and implements adequate incentive mechanisms for data contributions and curation.
