--- a/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
+++ b/docs/50_data_publication/20_choose_repository/90_csd_icsd.mdx
@@ -1,11 +1,11 @@
 ---
-title: "CSD, ICSD - Joint CCDC/FIZ Access Structure Service"
+title: "CSD/ICSD"
 slug: "/csd_icsd"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# CSD, ICSD - Joint CCDC/FIZ access structures service
+# CSD, ICSD – Joint CCDC/FIZ access structures service
 
 :::info Note:
 Link to [CSD](https://www.ccdc.cam.ac.uk/solutions/software/webcsd/) (requires license) [ICSD](https://icsd.fiz-karlsruhe.de/) (requires license) and [Joint CCDC/FIZ Access Structure](https://www.ccdc.cam.ac.uk/structures/) that provides open access to the CSD Structure Depot, but not all CSD data.
@@ -36,7 +36,7 @@ Link to [re3data](http://doi.org/10.17616/R3GW2V)
 
 -   **Accepted data types:** primarily CIF but other supporting file formats accepted.
 -   **Used standards/ontologies:** CIF, DataCite
--  **Data deposition condition:** open
+-   **Data deposition condition:** open
 -   **Recommended by Journals/Societies:** IUCr, Royal Society of Chemistry, American Chemical Society, Wiley, Elsevier, Springer Nature, Taylor & Francis, Hindawi, Chemical Society of Japan
 
 ## CSD, ICSD and joint CCDC/FIZ Access Structures Service
